# membrane

./: .gitignore  README.md  pyproject.toml  test_api.py  test_connect.py  verify_db.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/artifacts/: page.tsx
frontend/app/dashboard/memories/: page.tsx
frontend/app/dashboard/shared/: page.tsx
frontend/app/dashboard/workflows/: page.tsx
frontend/components/: ArchitectureDiagram.tsx  LiveTerminal.tsx  MembraneCore.tsx
frontend/lib/: api.ts
src/membrane/: __init__.py  __main__.py  app.py  artifact_manager.py  config.py  db.py  memory_manager.py  models.py  retrieval.py  scoped_managers.py  security.py  server.py  sui_client.py  user_context.py  users.py  walrus_client.py
src/membrane.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/membrane/api/: __init__.py  middleware.py  routers.py  schemas.py  services.py
tests/: conftest.py  test_api.py  test_artifact_manager.py  test_memory_manager.py  test_retrieval.py  test_security.py  test_server.py  test_sui_client.py  test_walrus_client.py
