[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane"
version = "2.0.0"
description = "Universal memory layer for AI agents — persistent, verifiable, and shareable via Walrus decentralized storage and MCP."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.27,<2",
    "asyncpg>=0.29.0",
    "fastembed>=0.2.7",
    "numpy>=1.26",
    "cryptography>=43",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
membrane = "membrane.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:langsmith"
markers = [
    "slow: mark test as slow to run (e.g. integration tests involving external resource download)"
]
